--- a/cpp/configs/gtp_example.cfg
+++ b/cpp/configs/gtp_example.cfg
@@ -51,7 +51,7 @@ logDir = gtp_logs    # Each run of KataGo will log to a separate file in this di
 # Logging options
 logAllGTPCommunication = true
 logSearchInfo = true
-logToStderr = false
+logToStderr = true
 
 # KataGo will display some info to stderr on GTP startup
 # Uncomment this to suppress that and remain silent
@@ -88,7 +88,7 @@ logToStderr = false
 # Some other legal values are: "chinese", "japanese", "korean", "aga", "chinese-ogs", "new-zealand".
 # KataGo does not claim to exactly match any particular human ruleset, but KataGo will try to behave
 # as closely as possible given the rules it has implemented.
-rules = tromp-taylor
+rules = japanese
 
 # Use the below instead to specify an arbitrary combination of individual rules.
 
@@ -113,6 +113,9 @@ rules = tromp-taylor
 
 # Uncomment and change to adjust what board size KataGo uses upon startup by default if GTP doesn't specify.
 # defaultBoardSize = 19
+
+# Force the opening. Types: "hole", "tengen", "newoubei".
+# forcedOpening = newoubei
 
 # Bot behavior---------------------------------------------------------------------------------------
 
@@ -149,7 +152,7 @@ resignConsecTurns = 3
 # Positive makes KataGo behave as if it is much stronger than the opponent, prefering to play aggressively or even overplay slightly.
 # If this and "dynamicPlayoutDoublingAdvantageCapPerOppLead" are BOTH set then dynamic will be used for all games and this fixed
 # value will be used for analysis tools.
-# playoutDoublingAdvantage = 0.0
+playoutDoublingAdvantage = 0.5
 
 # Uncommenting one of these will enforce that the FIXED playoutDoublingAdvantage will only apply when KataGo plays the specified color
 # and will be negated when playing the opposite color.
@@ -183,7 +186,7 @@ resignConsecTurns = 3
 # faster than the specified max if GTP tells it that it is playing under a clock as well in the current game.
 
 # If provided, limit maximum number of root visits per search to this much. (With tree reuse, visits do count earlier search)
-maxVisits = 500
+maxVisits = 12000
 # If provided, limit maximum number of new playouts per search to this much. (With tree reuse, playouts do not count earlier search)
 # maxPlayouts = 300
 # If provided, cap search time at this many seconds.
@@ -198,7 +201,7 @@ maxTimePondering = 60  # Maximum time to ponder, in seconds. Comment out to make
 lagBuffer = 1.0
 
 # Number of threads to use in search
-numSearchThreads = 6
+numSearchThreads = 16
 
 # Play a little faster if the opponent is passing, for friendliness
 searchFactorAfterOnePass = 0.50
