--- a/cpp/configs/match_example.cfg
+++ b/cpp/configs/match_example.cfg
@@ -41,7 +41,7 @@
 
 # Logs------------------------------------------------------------------------------------
 
-logSearchInfo = false
+logSearchInfo = true
 logMoves = false
 logGamesEvery = 50
 logToStdout = true
@@ -50,9 +50,20 @@ logToStdout = true
 # For multiple bots, you can specify their names as botName0,botName1, etc.
 # If the bots are using different models, specify nnModel0, nnModel1, etc.
 
-numBots=1
-botName=FOO
-nnModelFile=PATH_TO_MODEL
+numBots=3
+botName0 = PDA0.3
+botName1 = PDA0.4
+botName2 = PDA0.5
+
+playoutDoublingAdvantage0 = 0.3
+playoutDoublingAdvantage1 = 0.4
+playoutDoublingAdvantage2 = 0.5
+
+nnModelFile=base/models/b10c128-s121417984-d20703728/model.bin.gz
+
+# numBots=1
+# botName=BSK
+# nnModelFile=base/models/b10c128-s121417984-d20703728/model.bin.gz
 
 # Match-----------------------------------------------------------------------------------
 numGameThreads=8 # How many games to run in parallel at a time?
@@ -61,8 +72,8 @@ numGamesTotal=1000000
 maxMovesPerGame=1200
 
 allowResignation = true
-resignThreshold = -0.95
-resignConsecTurns = 6
+resignThreshold = -0.90
+resignConsecTurns = 3
 
 # Rules------------------------------------------------------------------------------------
 # See https://lightvector.github.io/KataGo/rules.html for a description of the rules.
