--- a/cpp/configs/training/selfplay1.cfg
+++ b/cpp/configs/training/selfplay1.cfg
@@ -39,7 +39,7 @@ reduceVisitsThresholdLookback = 3  # How many consecutive turns needed to be tha
 reducedVisitsMin = 100  # Minimum number of visits (never reduce below this)
 reducedVisitsWeight = 0.1  # Minimum training weight
 
-handicapAsymmetricPlayoutProb = 0.5  # In handicap games, play with unbalanced players with this probablity
+handicapAsymmetricPlayoutProb = 0.5  # In handicap games, play with unbalanced players with this probability
 normalAsymmetricPlayoutProb = 0.01  # In regular games, play with unbalanced players with this probability
 maxAsymmetricRatio = 8.0 # Max ratio to unbalance visits between players
 minAsymmetricCompensateKomiProb = 0.4 # Compensate komi with at least this probability for unbalanced players
@@ -47,11 +47,14 @@ minAsymmetricCompensateKomiProb = 0.4 # Compensate komi with at least this proba
 policySurpriseDataWeight = 0.5  # This proportion of training weight should be concentrated on surprising moves
 valueSurpriseDataWeight = 0.1   # This proportion of training weight should be concentrated on surprising position results
 
-# startPosesProb = 0.0  # Play this proportion of games starting from SGF positions
-# startPosesFromSgfDir = DIRECTORYPATH  # Load SGFs from this dir
-# startPosesLoadProb = 1.0  # Only load each position from each SGF with this chance (save memory)
-# startPosesTurnWeightLambda = 0  # 0 = equal weight  0.01 = decrease probability by 1% per turn  -0.01 = increase probability by 1% per turn.
-# startPosesPolicyInitAreaProp = 0.0  # Same as policyInitAreaProp but for SGF positions
+startPosesProb = 0.05  # Play this proportion of games starting from SGF positions
+startPosesFromSgfDir = human_sgf  # Load SGFs from this dir
+startPosesLoadProb = 0.05  # Only load each position from each SGF with this chance (save memory)
+startPosesTurnWeightLambda = 0  # 0 = equal weight  0.01 = decrease probability by 1% per turn  -0.01 = increase probability by 1% per turn.
+startPosesPolicyInitAreaProp = 0.02  # Same as policyInitAreaProp but for SGF positions
+
+# hintPosesProb = 0.5
+# hintPosesDir = hint
 
 estimateLeadProb = 0.05 # Train lead, rather than just scoremean. Consumes a decent number of extra visits, can be quite slow using low visits to set too high.
 switchNetsMidGame = true  # When a new neural net is loaded, switch to it immediately instead of waiting for new game
@@ -77,7 +80,7 @@ allowRectangleProb = 0.00 # Play game on rectangular board with this probability
 komiAuto = True  # Automatically adjust komi to what the neural nets think are fair
 # komiMean = 7.0 # Specify explicit komi
 komiStdev = 1.0  # Standard deviation of random variation to komi.
-handicapProb = 0.10 # Probability of handicap game
+handicapProb = 0.50 # Probability of handicap game
 handicapCompensateKomiProb = 0.50 # In handicap games, adjust komi to fair with this probability
 forkCompensateKomiProb = 0.80     # For forks, adjust komi to fair with this probability
 sgfCompensateKomiProb = 0.90      # For sgfs, adjust komi to fair with this probability
@@ -89,7 +92,7 @@ noResultStdev = 0.166666666
 
 # Search limits-----------------------------------------------------------------------------------
 
-maxVisits = 600
+maxVisits = 200
 numSearchThreads = 1
 
 # GPU Settings-------------------------------------------------------------------------------
